--- a/okg-ml.yaml
+++ b/okg-ml.yaml
@@ -18298,7 +18298,8 @@ mappings:
     <(Assay)>
       BAO:0000209 <(Measure_Group)>. # (has measure group)
     <(Assay_InvitroDB)>
-      BAO:0000209 <(Measure_Group)>. # (has measure group)
+      BAO:0000209 <(Measure_Group)>; # (has measure group)
+      dce:source  "InvitroDB"      .
 
     <(Measure_Group)>
       OBI:0000299 <(Endpoint)>        ; # (has specified output)
