Add DB_VIRTUOSO_HTTP_PORT environment variable

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Needed for Makefile.docker, docker-compose.yml
 export DB_VIRTUOSO_PATH="/path/to/virtuoso-db"
+
+# Needed for docker-compose.yml
+export DB_VIRTUOSO_HTTP_PORT="8890"
